 * ocsp responses are now saved in and retrieved from store. Concurrent access in place, timed
   invalidation handling still missing.
 * first own ocsp test successful.
 * first ocsp responses are retrieved, but the cache does not work cross-process yet.
 * New directives "MDStapling on|off"
 * Overall, connect and stall timeouts set in http client requests.
 * Prepping http client for multi request handling in parallel.
 * Adaptions for new mod_ssl interface via hooks, as available in apache trunk.
 * Fixing NULL dereferences when unable to lead certificate chains from staging.
 * Updating a newly created account in a2md right away to make sure it responds. 

v2.0.6
----------------------------------------------------------------------------------------------------
 * MDs with static certificate (MDCertificateFile) are not auto-renewed. But they are watched
   for expiration and trigger a configured MDMessageCmd.
 * ACME challenge method 'tls-alpn-01' is now checked for each domain in an MD individually
   and no longer needs to be available for all domains.

v2.0.5
----------------------------------------------------------------------------------------------------
 * Renewal jobs now have their own log attached with timestamps when renewal was started,
   ran into errors, finished. The job JSON files are copied from staging into the domain
   directory for possible later review.
 * job logs now list all activities during renewal.
 * new `MDMessageCmd` added as alternative to MDNotifyCmd. This command is called with an
   addition "reason" parameter that specifies what happened to the manged domain. 
 * `MDNotifyCmd` is now called for each domain that has been successfully renewed. Not for 
   all Managed Domains after all have been processed. This gives notifications earlier.
   Notification errors are now also collected under MD status and notifications are retried
   with backoff delays.